applied post ok